--- a/AquariumSpiel/AquariumSpiel/AquariumSpiel.csproj
+++ b/AquariumSpiel/AquariumSpiel/AquariumSpiel.csproj
@@ -43,10 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aquarium.cs" />
+    <Compile Include="Blowfish.cs" />
     <Compile Include="Carp.cs" />
     <Compile Include="Fishies.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shark.cs" />
+    <Compile Include="Swordfish.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
